# strava-activity-mcp-server

./: AGENTS.md  Aent.md  CHANGELOG.md  README.md  pyproject.toml
.github/instructions/: *.instructions.md  instructions.md
ref/: agent_doc.md  mcp_pypi_exampole.md  test.txt
src/strava_activity_mcp_server/: __init__.py  stava_activity_mcp_server.py  strava_activity_mcp_server.py
