[project]
name = "strava-activity-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
strava-activity-mcp-server = "strava_activity_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
