[project]
name = "strava-activity-mcp-server"
version = "1.0.2"
description = "Strava MCP server with secure token handling and summary-first analytics"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Bojan Makivic" }
]
maintainers = [
  { name = "Bojan Makivic" }
]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

keywords = ["strava", "mcp", "model-context-protocol", "fitness", "analytics"]

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Fitness :: Information Analysis :: MCP Server",
]

dependencies = [
  "mcp[cli]>=1.16.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["build>=1.3.0", "twine>=6.2.0", "ty>=0.0.14"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]
security = ["pip-audit>=2.7.0", "bandit>=1.7.10"]

[project.urls]
Homepage = "https://github.com/BojanMakivic/strava-activity-mcp-server"
Documentation = "https://github.com/BojanMakivic/strava-activity-mcp-server/blob/main/README.md"
Source = "https://github.com/BojanMakivic/strava-activity-mcp-server"
Changelog = "https://github.com/BojanMakivic/strava-activity-mcp-server/blob/main/CHANGELOG.md"